test/Fail/Issue2580.err
Issue2580.agda:15.12-16: error: [UnequalTerms]
The terms
  abort Bool {x}
and
  abort Bool {y}
are not equal at type Bool
when checking that the expression refl has type
abort Bool ≡ abort Bool
